--- a/webtoon-api/src/main/resources/application.yml
+++ b/webtoon-api/src/main/resources/application.yml
@@ -1,3 +1,23 @@
-server:
-  port: 8081
+spring:
+  config:
+    import: "classpath:/application-webtoon-core.yml"
+  profiles:
+    group:
+      local: "webtoon-core-local"
+      beta: "webtoon-core-beta"
+
+---
+spring:
+  config:
+    activate.on-profile: local
+
+server.port: 8081
+
+---
+spring:
+  config:
+    activate.on-profile: beta
+
+#logging:
+#  config: classpath:logback-beta.xml
 
