--- a/.github/workflows/deploy-api-server.yml
+++ b/.github/workflows/deploy-api-server.yml
@@ -26,6 +26,6 @@ jobs:
           cp ./webtoon-api/build/libs/*.jar /app/webtoon-api/webtoon-api.jar
       - name: start application jar
         run: |
-          sudo nohup java -jar /app/webtoon-api/webtoon-api.jar -Dspring.profiles.active=beta > /dev/null 2>&1 &
+          sudo nohup java -jar -Dspring.profiles.active=beta /app/webtoon-api/webtoon-api.jar > /dev/null 2>&1 &
           sleep 3
 
