--- a/.github/workflows/deploy-api-server.yml
+++ b/.github/workflows/deploy-api-server.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Build with Gradle
         run: |
           ./gradlew clean :webtoon-api:bootJar
-      - name: kill application if exist
+      - name: stop service
         run: |
-          pgrep -f webtoon-api | xargs -r sudo kill -15
+          sudo systemctl stop webtoon-api.service
           sleep 5
       - name: replace jar file
         run: |
           rm -f /app/webtoon-api/webtoon-api.jar
           cp ./webtoon-api/build/libs/*.jar /app/webtoon-api/webtoon-api.jar
-      - name: start application jar
+      - name: start service
         run: |
-          sudo nohup java -jar -Dspring.profiles.active=beta /app/webtoon-api/webtoon-api.jar > /dev/null 2>&1 &
+          sudo systemctl start webtoon-api.service
           sleep 3
 
