--- a/.github/workflows/deploy-api-server.yml
+++ b/.github/workflows/deploy-api-server.yml
@@ -1,10 +1,10 @@
-name: Deploy API server
+name: Build jar and deploy API server
 on:
   push:
     branches:
       - develop
 jobs:
-  Explore-GitHub-Actions:
+  build-jar:
     runs-on: [ self-hosted, linux, X64 ]
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -15,16 +15,26 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Build with Gradle
         run: |
-          ./gradlew clean :webtoon-api:bootJar
-      - name: stop service
+          ./gradlew clean :webtoon-api:bootJar :webtoon-batch:bootJar
+  replace-batch-jar:
+    runs-on: [ self-hosted, linux, X64 ]
+    steps:
+      - name: replace batch jar file
+        run: |
+          rm -f /app/webtoon-batch/webtoon-batch.jar
+          cp ./webtoon-batch/build/libs/*.jar /app/webtoon-batch/webtoon-batch.jar
+  run-webtoon-api-service:
+    runs-on: [ self-hosted, linux, X64 ]
+    steps:
+      - name: stop webtoon-api service
         run: |
           sudo systemctl stop webtoon-api.service
           sleep 5
-      - name: replace jar file
+      - name: replace webtoon-api jar file
         run: |
           rm -f /app/webtoon-api/webtoon-api.jar
           cp ./webtoon-api/build/libs/*.jar /app/webtoon-api/webtoon-api.jar
-      - name: start service
+      - name: start webtoon-api service
         run: |
           sudo systemctl start webtoon-api.service
           sleep 3
