--- a/.github/workflows/deploy-api-server.yml
+++ b/.github/workflows/deploy-api-server.yml
@@ -7,35 +7,29 @@ jobs:
   build-jar:
     runs-on: [ self-hosted, linux, X64 ]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: |
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Build with Gradle
         run: |
           ./gradlew clean :webtoon-api:bootJar :webtoon-batch:bootJar
-  replace-batch-jar:
-    runs-on: [ self-hosted, linux, X64 ]
-    steps:
+
       - name: replace batch jar file
         run: |
           rm -f /app/webtoon-batch/webtoon-batch.jar
           cp ./webtoon-batch/build/libs/*.jar /app/webtoon-batch/webtoon-batch.jar
-  run-webtoon-api-service:
-    runs-on: [ self-hosted, linux, X64 ]
-    steps:
-      - name: stop webtoon-api service
+
+      - name: restart webtoon-api service
         run: |
           sudo systemctl stop webtoon-api.service
           sleep 5
-      - name: replace webtoon-api jar file
-        run: |
+
           rm -f /app/webtoon-api/webtoon-api.jar
           cp ./webtoon-api/build/libs/*.jar /app/webtoon-api/webtoon-api.jar
-      - name: start webtoon-api service
-        run: |
+
           sudo systemctl start webtoon-api.service
           sleep 3
-
