[GH-20] 배치 github action 파일 추가

--- a/webtoon-batch/src/main/resources/application.yml
+++ b/webtoon-batch/src/main/resources/application.yml
@@ -5,11 +5,12 @@ spring:
     group:
       local: "webtoon-core-local"
       beta: "webtoon-core-beta"
-
   batch:
     initialize-schema: never
     job:
       names: ${job.name:NONE}
+  main:
+    web-application-type: none
 
 
 ---
