--- a/.github/workflows/batch-helloworld.yml
+++ b/.github/workflows/batch-helloworld.yml
@@ -2,12 +2,16 @@ name: run webtoon batch
 on:
   push:
     branches:
-      - 'not_available'
+      - batch_test
 jobs:
 
   build:
     name: run sampleJob batch
     runs-on: [ self-hosted, linux, X64 ]
     steps:
-      - run: |
-          sudo java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=sampleJob
+      - shell: bash
+        env:
+          WEBTOON_SERVICE_DB_USERNAME: ${{ secrets.WEBTOON_SERVICE_DB_USERNAME }}
+          WEBTOON_SERVICE_DB_PASSWORD: ${{ secrets.WEBTOON_SERVICE_DB_PASSWORD }}
+        run: |
+          java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=sampleJob
