--- a/.github/workflows/batch-helloworld.yml
+++ b/.github/workflows/batch-helloworld.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: [ self-hosted, linux, X64 ]
     steps:
       - run: |
-          sudo java -jar -Dspring.profiles.active=beta --job.name=sampleJob /app/webtoon-batch/webtoon-batch.jar
+          sudo java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=sampleJob
