[GH-20] 배치 파라미터 이슈 수정

--- a/.github/workflows/batch-helloworld.yml
+++ b/.github/workflows/batch-helloworld.yml
@@ -1,7 +1,7 @@
 name: run webtoon batch
 on:
   schedule:
-    - cron: '5 15 * * *' # 12시 정각
+    - cron: '5 15 * * *' # 12시 5분 동작
   workflow_dispatch:
     inputs:
       requestDate:
