[GH-23] DaumCrawlerService 리팩토링

--- a/webtoon-core/src/main/resources/application-webtoon-core.yml
+++ b/webtoon-core/src/main/resources/application-webtoon-core.yml
@@ -11,6 +11,21 @@ spring:
 ---
 spring.config:
   activate:
+    on-profile: webtoon-local-test
+
+spring:
+  jpa:
+    database: h2
+    properties.hibernate:
+      show_sql: true
+      format_sql: true
+    hibernate:
+      ddl-auto: create
+
+---
+
+spring.config:
+  activate:
     on-profile: webtoon-core-local
 
 spring:
