--- a/.github/workflows/batch-daum-webtoon-update.yml
+++ b/.github/workflows/batch-daum-webtoon-update.yml
@@ -6,12 +6,12 @@ on:
     inputs:
       requestDate:
         description: '기준일자'
-        required: true
+        required: false
         default: ''
 jobs:
 
   build:
-    name: run daumWebtoonUpdateJob batch
+    name: run sampleJob batch
     runs-on: [ self-hosted, X64, linux ]
     steps:
       - shell: bash
@@ -19,4 +19,4 @@ jobs:
           WEBTOON_SERVICE_DB_USERNAME: ${{ secrets.WEBTOON_SERVICE_DB_USERNAME }}
           WEBTOON_SERVICE_DB_PASSWORD: ${{ secrets.WEBTOON_SERVICE_DB_PASSWORD }}
         run: |
-          java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=daumWebtoonUpdateJob requestDate=20210507
+          java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=daumWebtoonUpdateJob requestDate=${{ github.event.inputs.requestDate }}
