--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Cache Gradle packages
         uses: actions/cache@v2
         with:
@@ -28,13 +29,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Build with Gradle
-        run: ./gradlew clean ktlintCheck test integrationTest
+        run: ./gradlew clean ktlintCheck test integrationTest codeCoverageReport
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
           rm -f ~/.gradle/caches/modules-2/gc.properties
+
+      - name: code-coverage
+        uses: codecov/codecov-action@v1
+        with:
+          verbose: true # optional (default = false)
+
       - name: action-slack
         uses: 8398a7/action-slack@v3
         with:
