[TEST] pull-request 시점에서 ci가 동작하도록 설정 추가

--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches:
       - develop
+      - master
+  pull_request:
+    branches:
+      - develop
+      - master
 
 jobs:
   build:
