--- a/webtoon-core/src/main/resources/application-webtoon-core.yml
+++ b/webtoon-core/src/main/resources/application-webtoon-core.yml
@@ -22,6 +22,20 @@ spring:
       ddl-auto: create
 
 ---
+spring.config:
+  activate:
+    on-profile: webtoon-integration-test
+
+spring:
+  jpa:
+    database: h2
+    properties.hibernate:
+      show_sql: true
+      format_sql: true
+    hibernate:
+      ddl-auto: create
+
+---
 
 spring.config:
   activate:
