--- a/webtoon-core/src/main/resources/application-webtoon-core.yml
+++ b/webtoon-core/src/main/resources/application-webtoon-core.yml
@@ -5,7 +5,10 @@ spring:
       show_sql: true
     hibernate:
       ddl-auto: validate
-
+    properties:
+      hibernate:
+        query.in_clause_parameter_padding: true
+        default_batch_fetch_size: 16
 
 ---
 spring.config:
