--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -7,6 +7,9 @@ on:
       - develop
       - master
   pull_request:
+    types:
+      - synchronize
+      - opened
     branches:
       - develop
       - master
