--- a/.github/workflows/deploy-admin-server.yml
+++ b/.github/workflows/deploy-admin-server.yml
@@ -11,6 +11,10 @@ jobs:
           echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Build with Gradle
         run: |
