--- a/webtoon-admin/src/front/package.json
+++ b/webtoon-admin/src/front/package.json
@@ -16,7 +16,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "BUILD_PATH='../main/resources/static' react-scripts build",
+        "build": "CI=false BUILD_PATH='../main/resources/static' react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
