다음 스케쥴러

--- a/.github/workflows/batch-daum-webtoon-update.yml
+++ b/.github/workflows/batch-daum-webtoon-update.yml
@@ -1,7 +1,7 @@
 name: "[BATCH] 다음 연재중 웹툰 크롤링"
 on:
-  #  schedule:
-  #    - cron: '5 15 * * *' # 12시 5분 동작
+    schedule:
+      - cron: '5 15 * * *' # 12시 5분 동작
   workflow_dispatch:
     inputs:
       requestDate:
