--- a/.github/workflows/batch-daum-webtoon-complete.yml
+++ b/.github/workflows/batch-daum-webtoon-complete.yml
@@ -19,7 +19,7 @@ jobs:
           WEBTOON_SERVICE_DB_USERNAME: ${{ secrets.WEBTOON_SERVICE_DB_USERNAME }}
           WEBTOON_SERVICE_DB_PASSWORD: ${{ secrets.WEBTOON_SERVICE_DB_PASSWORD }}
         run: |
-          java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=daumCompletedWebtoonUpdateJob requestDate=${{ github.event.inputs.requestDate }}
+          java -jar -Dspring.profiles.active=beta /app/webtoon-batch/webtoon-batch.jar --job.name=daumCompletedWebtoonUpdateJob
       - name: action-slack
         uses: 8398a7/action-slack@v3
         with:
