--- a/.github/workflows/batch-daum-webtoon-complete.yml
+++ b/.github/workflows/batch-daum-webtoon-complete.yml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   build:
-    name: run sampleJob batch
+    name: run daumCompletedWebtoonUpdateJob batch
     runs-on: [ self-hosted, X64, linux ]
     steps:
       - shell: bash
